@@ -25,4 +25,3 @@
 - create a prob_match() function
 - IntroductionToSequenceMotifs.Rmd: for R code versions of ICM functions, make
   sure that NaNs are converted to 0 during entropy calculations
-- ppm_to_icm: use na.rm=TRUE in -sum instead of ifelse code
